--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -255,7 +255,12 @@
     "adminSearch": "Search",
     "todayScans": "Today's scans",
     "onlineUsers": "Online users",
-    "scannedFiles": "Scanned files"
+    "scannedFiles": "Scanned files",
+    "alphabetic": "alphabetic",
+    "creationDate": "Creation Date",
+    "Newest": "Newest",
+    "recordedActivities": "Recorded activities",
+    "userRecordedActivities": "Recorded user activities"
   },
   "license": {
     "licenseId": "license Id",
