refactor(Dashboard Page): Redesign Dashboard Page and modified or add several components in the Dashboard page (not complete yet)
- modified several components in the Dashboard page
- including layout changes, addition of new components
- Updated package.json and add new library for chartjs
- SEP-75: Redesign Dashboard part1

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -120,7 +120,12 @@
     "desktopThePreparation": " Desktop Preparation",
     "extensionList": "Extension Lists",
     "infectedFile": "infected File",
-    "days": "Days"
+    "days": "Days",
+    "progressChart": "Progress chart",
+    "activeLicenses": "Active licenses",
+    "onlineUsers": "Online users",
+    "netsep": "NetSep",
+    "scans": "Scans"
   },
   "admin": {
     "adminUserName": "abc@abc.com",
@@ -221,7 +226,8 @@
     "user": "User",
     "group": "Group",
     "fa": "Persian",
-    "en": "English"
+    "en": "English",
+    "domain": "Domain"
   },
   "groupManagement": {
     "person": "person",
