--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -250,7 +250,7 @@
     "loginTypeChoose": "Choose your login type",
     "internet": "internet",
     "remote": "Remote Assistance",
-    "exitFromUserProfile": "Exit From User Profile",
+    "exitFromUserProfile": "Log Out",
     "enterDesktop": "Enter Desktop",
     "admins": " Admins Of Groups",
     "members": "Member of Groups",
