fix: add some thing in translate file

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -206,7 +206,7 @@
     "usedPamLicense": "لایسنس PAM استفاده شده",
     "somethingWentWrong": "مشکلی پیش آمد",
     "genrateQrcode": "تولید Qrcode ",
-    "activateOtp": "فعالسازی otp",
+    "activateOtp": "فعالسازی OTP",
     "userInfo": "مشخصات کاربر",
     "accessList": "لیست دسترسی",
     "videoDuration": "مدت زمان ویدیو",
