--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -8,7 +8,7 @@
   },
   "header": {
     "user": "User",
-    "admin": "admin"
+    "admin": "Admin"
   },
   "table": {
     "accessTime": "Access Time",
