style : add new padding & ok type name

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -144,7 +144,7 @@
     "selectDate": "Select Date",
     "sucessfylySaved": "Successfully Saved",
     "lastName": "Last Name",
-    "name": "Name",
+    "name": "First Name",
     "repeatNewPassword": "Repeat New Password",
     "email": "Email",
     "metaAdmin": "Super Admin",
