refactor(DashboardPage): redesign layout and add new components
- Modified several components in the Dashboard page layout
- Added new components as part of the redesign
- Updated package.json to include a new library for Chart.js
- SEP-75: Redesign Dashboard part 1

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -125,7 +125,8 @@
     "activeLicenses": "Active licenses",
     "onlineUsers": "Online users",
     "netsep": "NetSep",
-    "scans": "Scans"
+    "scans": "Scans",
+    "userBehavior": "User Behavior"
   },
   "admin": {
     "adminUserName": "abc@abc.com",
