fix: add regex english

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -281,7 +281,41 @@
     "wholeNumbers": "Whole Numbers",
     "expirationDate": "Expiration date"
   },
-
+  "regexPattern": {
+    "value": "Please enter a valid link",
+    "onlyEnglishNdOtherCharacters": "Please use only English letters",
+    "lessThan50": "Enter numbers between zero and fifty",
+    "lessThan100": "Enter numbers between zero and one hundred",
+    "lettersDashUnderLineSpace": "Please use only English letters (numbers are not allowed)",
+    "lettersDashSpace": "Please use only English letters (numbers are not allowed)",
+    "lettersEnglishSpace": "Please use only English letters and numbers (allowed characters: - and _)",
+    "enCharAndNumber": "Only English letters and numbers",
+    "lettersDashUnderLineNumbers": "Only English letters, -, _, and numbers",
+    "gitUrl": "The Git URL must be the same address used for cloning and end with .git",
+    "smallLettersThenNumbers": "Folder name must be in lowercase English letters and cannot start with a number",
+    "farsiLetters": "Please enter your first and last name in Farsi",
+    "accountNumber": "The account number is incorrect",
+    "farsiLettersAndSpace": "Must be in Farsi",
+    "email": "Enter the email format correctly and completely",
+    "phoneNumber": "Correct mobile format: 09xxxxx1234",
+    "phoneNumber2": "Correct mobile format: 09xxxxx1234",
+    "englishLetter": "Please use only English letters",
+    "farsiLetter": "Please use only Farsi letters",
+    "numbers": "Please use only numbers",
+    "en_spc": "Please use only English letters and spaces",
+    "fa_spc": "Please use only Farsi letters and spaces",
+    "lettersLenght3": "check pattern",
+    "eightchar_number_lower_uppercase": "Must be at least 8 characters and contain uppercase and lowercase Latin letters",
+    "password": "Password must be at least 8 characters and contain uppercase and lowercase Latin letters",
+    "required": "This field is required",
+    "jsonValidate": "Must be in JSON format",
+    "spaceFarstCharacter": "Space is not allowed at the beginning",
+    "cardNumber": "Use only numbers",
+    "shebaNumber": "Use only numbers",
+    "cardBankNumber": "Use only numbers",
+    "price": "Please use only numbers",
+    "phoneNumberNoZeroAtStart": "Correct mobile format: 9xxxxx1234"
+  },
   "title": {
     "systemAdminDescription1": "1- Any user added is recognized as a system admin and has access to system changes.",
     "systemAdminDescription2": "Please note that the user recognized as a administrator has the ability to add and remove other admins.",
