feat: update translate file

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -225,7 +225,9 @@
     "en": "انگلیسی",
     "userType": "نوع کاربری",
     "domain": "دامنه",
-    "save": "ذخیره"
+    "save": "ذخیره",
+    "remove": "حذف مورد",
+    "sureAboutDeleteUser": "آیا از حذف این کاربر مطمئن هستید؟"
   },
   "groupManagement": {
     "person": "نفر",
