--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -224,7 +224,9 @@
     "en": "English",
     "userType": "User type",
     "domain": "Domain",
-    "save": "Save"
+    "save": "Save",
+    "remove": "Delete",
+    "sureAboutDeleteUser": "Are you sure want to delete the user?"
   },
   "groupManagement": {
     "person": "person",
