fix(DashboardAdminLogs): replace mock data with Table component
- Integrated Table component and removed mock data
- Added real data to display in the Table component
- Updated translation files and added new keys as needed
- SEP-75: Redesign Dashboard

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -126,7 +126,8 @@
     "onlineUsers": "Online users",
     "netsep": "NetSep",
     "scans": "Scans",
-    "userBehavior": "User Behavior"
+    "userBehavior": "User Behavior",
+    "adminLogin": "Admin Login"
   },
   "admin": {
     "adminUserName": "abc@abc.com",
