--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -98,6 +98,7 @@
     "trustedUploadFormat": "Trusted Upload Format",
     "downloadPrivilege": "Download Privilege",
     "uploadPrivilege": "upload Privilege",
+    "downloadAndUploadPrivilege":"Download and Upload Access",
     "recordingActivity": "recording Activity",
     "startDate": "start Date",
     "endDate": "end Date",
