fix(DashboardPage): post-review style and code cleanup
- Adjusted styles for better alignment with design
- Added necessary translations for missing texts
- Removed unused comments and redundant code
- SEP-75: RedesignDashboard-part1

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -104,7 +104,8 @@
     "activeQrcode": " Qrcode ",
     "activeOtp": "  Otp ",
     "isRecording": "Is Recording",
-    "yesterday": "Yesterday"
+    "yesterday": "Yesterday",
+    "lastLogout" : "Last Logout"
   },
   "dashboard": {
     "adminLists": "Admin Lists",
