fix: add pagination i18 labels

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -129,6 +129,8 @@
   "global": {
     "knowledgeManagement": "Knowledge Management",
     "monitoring": "Monitoring",
+    "show": "Show",
+    "of": "of",
     "userName": "Username",
     "password": "Password",
     "requiredField": "This field is required.",
