--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -131,6 +131,8 @@
     "userName": "نام کاربری",
     "knowledgeManagement": "مدیریت دانش",
     "monitoring": "نظارت",
+    "show": "نمایش",
+    "of": "از",
     "password": "گذرواژه",
     "requiredField": "درج این فیلد ضروریست.",
     "successfullyLogedIn": "شما با موفقیت وارد شدید",
