fix: add i18 for onlineAdmins

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -130,6 +130,7 @@
   "global": {
     "knowledgeManagement": "Knowledge Management",
     "alphabet": "Alphabet",
+    "onlineAdmin": "Online admin",
     "creationDate": "Creation date",
     "choseDomain": "Domain",
     "newest": "Newest",
