feat: add newTable to page

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -138,6 +138,7 @@
     "choseDomain": "Domain",
     "newest": "Newest",
     "grouping": "Grouping",
+    "format": "format",
     "monitoring": "Monitoring",
     "show": "Show",
     "of": "of",
