--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -144,6 +144,7 @@
     "show": "نمایش",
     "of": "از",
     "password": "گذرواژه",
+    "format": "فرمت",
     "requiredField": "درج این فیلد ضروریست.",
     "successfullyLogedIn": "شما با موفقیت وارد شدید",
     "exit": "خروج",
