feat(translation): add new titles to en/fa translation files
- Added several new titles to both English and Persian
  translation files to support recent UI redesign

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -109,7 +109,8 @@
     "access": "دسترسی",
     "userType": "نوع کاربری",
     "deleteAdmin": "حذف ادمین",
-    "editAdminInfo": "ویرایش مشخصات"
+    "editAdminInfo": "ویرایش مشخصات",
+    "lastLogout": "آخرین خروج"
   },
   "dashboard": {
     "adminLists": "لیست ادمین ها",
@@ -128,7 +129,14 @@
     "infectedFile": "فایل آلوده",
     "uba": "رفتار شناسی کاربر",
     "extentions": "فرمت ها",
-    "days": "روز"
+    "days": "روز",
+    "progressChart": "نمودار پیشرفت",
+    "activeLicenses": "لایسنس‌های فعال",
+    "onlineUsers": "کاربران آنلاین",
+    "netsep": "نت سپ",
+    "scans": "اسکن ها",
+    "userBehavior": "رفتار شناسی کاربر",
+    "adminLogin": "ورود و خروج ادمین‌ها"
   },
   "admin": {
     "adminUserName": "abc@abc.com",
