--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -108,7 +108,8 @@
     "access": "Access",
     "userType": "User type",
     "deleteAdmin": "Delete Admin",
-    "editAdminInfo": "Edit Admin Info"
+    "editAdminInfo": "Edit Admin Info",
+    "lastLogout": "Last Logout"
   },
   "dashboard": {
     "adminLists": "Admin Lists",
@@ -127,7 +128,14 @@
     "infectedFile": "infected File",
     "uba": "UBA",
     "extentions": "Extentions List",
-    "days": "Days"
+    "days": "Days",
+    "progressChart": "Progress chart",
+    "activeLicenses": "Active licenses",
+    "onlineUsers": "Online users",
+    "netsep": "NetSep",
+    "scans": "Scans",
+    "userBehavior": "User Behavior",
+    "adminLogin": "Admin Login"
   },
   "admin": {
     "adminUserName": "abc@abc.com",
