fix:fixed bug of coonect to api

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -122,7 +122,8 @@
     "desktopThePreparation": " Desktop Preparation",
     "extensionList": "Extension Lists",
     "infectedFile": "infected File",
-    "days": "Days"
+    "days": "Days",
+    "saveChanges":"Save Changes"
   },
   "admin": {
     "adminUserName": "abc@abc.com",
@@ -302,7 +303,16 @@
   },
   "setting": {
     "application": "Application",
-    "dass": "DaaS"
+    "dass": "DaaS",
+    "ssoBaseURL":"SSO base URL",
+    "ssoClientID":"SSO client ID",
+    "ssoSecret":"SSO Secret",
+    "ssoPort":"SSO Port",
+    "ssoRealm":"SSO realm",
+    "logServer":"Log Server",
+    "logServerIP":"Log Server IP",
+    "logServerPort":"Log Server Port",
+    "daasProvider":"Daas provider baseURL"
   },
 
   "regexPattern": {
@@ -338,7 +348,8 @@
     "shebaNumber": "Use only numbers",
     "cardBankNumber": "Use only numbers",
     "price": "Please use only numbers",
-    "phoneNumberNoZeroAtStart": "Correct mobile format: 9xxxxx1234"
+    "phoneNumberNoZeroAtStart": "Correct mobile format: 9xxxxx1234",
+    "ip":"Please enter the correct IP format"
   },
   "title": {
     "systemAdminDescription1": "1- Any user added is recognized as a system admin and has access to system changes.",
