fix: update translate file

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -285,6 +285,15 @@
     "onlineUsers": "کاربران آنلاین",
     "scannedFiles": "فایل های اسکن شده"
   },
+  "adminList": {
+    "userInfo": "مشخصات کاربر",
+    "userType": "نوع کاربری",
+    "systemAdminDescription2": "توجه داشته باشید کاربری که به عنوان سوپر ادمین شناخته شود ، قابلیت اضافه و حذف کردن دیگر ادمین‌ها را دارد.",
+    "admin": "ادمین",
+    "metaAdmin": "سوپر ادمین",
+    "choseDomain": "انتخاب دامنه",
+    "systemAdminOtp": "بعد از فعالسازی برای ورود به سامانه قسمت پایین را با تلفن همراه خود اسکن کنید."
+  },
   "license": {
     "licenseId": "شناسه لایسنس",
     "licenses": "لایسنس ها",
