fix: add new in translate file

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -288,7 +288,7 @@
   "adminList": {
     "userInfo": "مشخصات کاربر",
     "userType": "نوع کاربری",
-    "systemAdminDescription2": "توجه داشته باشید کاربری که به عنوان سوپر ادمین شناخته شود ، قابلیت اضافه و حذف کردن دیگر ادمین‌ها را دارد.",
+    "systemAdminDescription": "توجه داشته باشید کاربری که به عنوان سوپر ادمین شناخته شود ، قابلیت اضافه و حذف کردن دیگر ادمین‌ها را دارد.",
     "admin": "ادمین",
     "metaAdmin": "سوپر ادمین",
     "choseDomain": "انتخاب دامنه",
