update:add placholder in tranlation file

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -316,7 +316,10 @@
     "logServer": "Log Server",
     "logServerIP": "Log Server IP",
     "logServerPort": "Log Server Port",
-    "daasProvider": "Daas provider baseURL"
+    "daasProvider": "Daas provider baseURL",
+    "clientIDP":"clinet id",
+    "secretP":"secret",
+    "realmP":"realm"
   },
   "regexPattern": {
     "value": "لطفا لینک معتبر وارد کنید",
