fix(Dashboard page): adjustments after 2nd review of Dashboard
- Improved error and loading functionality for smoother page
  performance
- Updated type definitions, replaced interfaces with types
- Adjusted spacing and styling for better alignment with design

SEP-75: RedesignDashboard-part1

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -109,7 +109,8 @@
     "userType": "User type",
     "deleteAdmin": "Delete Admin",
     "editAdminInfo": "Edit Admin Info",
-    "lastLogout": "Last Logout"
+    "lastLogout": "Last Logout",
+    "adminUserName": "Name"
   },
   "dashboard": {
     "adminLists": "Admin Lists",
@@ -135,7 +136,8 @@
     "netsep": "NetSep",
     "scans": "Scans",
     "userBehavior": "User Behavior",
-    "adminLogin": "Admin Login"
+    "adminLogin": "Admin Login",
+    "virusFiles": "Virus Files"
   },
   "admin": {
     "adminUserName": "abc@abc.com",
