fix: update translate file

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -28,7 +28,7 @@
     "desktop": "Desktop",
     "desktopV": "Desktop Version",
     "status": "Status",
-    "defaultSetting": "Default Settings",
+    "defaultSetting": "Default",
     "search": "Search",
     "addNewAdmin": "Add New Admin",
     "nameOfTheUser": "User Name",
@@ -70,12 +70,12 @@
     "licenseExpirationDate": "license Expiration Date",
     "licenseCreation": "license Creation",
     "validLicense": "valid License",
-    "httpPort": "http port",
-    "httpsPort": "https port",
+    "httpPort": "HTTP port",
+    "httpsPort": "HTTPS port",
     "accessCapacity": "authorized capacity",
     "containerId": "container id",
     "lastUptime": "last uptime",
-    "lastLoginIp": "last Login Ip",
+    "lastLoginIp": "Last Login Ip",
     "download": "download",
     "selectTimeFrame": "Select Time Frame",
     "sessionRecording": "Session Recording",
@@ -109,7 +109,14 @@
     "userType": "User type",
     "deleteAdmin": "Delete Admin",
     "editAdminInfo": "Edit Admin Info",
-    "lastLogout": "Last Logout"
+    "lastLogout": "Last Logout",
+    "setting": "Setting",
+    "timing": "Timing",
+    "connection": "Connection",
+    "custom": "Custom",
+    "block": "Block",
+    "assistance": "Assistance",
+    "deleteUser": "Delete User"
   },
   "dashboard": {
     "adminLists": "Admin Lists",
