--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -311,6 +311,12 @@
     "choseDomain": "انتخاب دامنه",
     "systemAdminOtp": "بعد از فعالسازی برای ورود به سامانه قسمت پایین را با تلفن همراه خود اسکن کنید."
   },
+  "userList": {
+    "onlineUsers": "کاربران آنلاین",
+    "blockedUsers": "کاربران مسدود شده",
+    "searchUsers": "جستجوی کاربر"
+  },
+
   "license": {
     "licenseId": "شناسه لایسنس",
     "licenses": "لایسنس ها",
