--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -314,7 +314,8 @@
   "userList": {
     "onlineUsers": "کاربران آنلاین",
     "blockedUsers": "کاربران مسدود شده",
-    "searchUsers": "جستجوی کاربر"
+    "searchUsers": "جستجوی کاربر",
+    "usersList": "لیست کاربران"
   },
 
   "license": {
